[n/a] Adding link to article or project

--- a/app/projects/work/goodbids.mdx
+++ b/app/projects/work/goodbids.mdx
@@ -1,12 +1,8 @@
 ---
 title: "GOODBIDS"
 publishedAt: "2024-04-28"
-summary: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt"
+summary: "A novel approach to online fundraising - positive auctions, with a twist."
 role: "Full Stack Developer"
 tech: "WordPress, Tailwind CSS, PHP, React"
+url: "https://www.viget.com/work/goodbids-charity-auction-platform/"
 ---
-
-# Title
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
