--- a/app/blog/posts/vite-ddev-wordpress.mdx
+++ b/app/blog/posts/vite-ddev-wordpress.mdx
@@ -2,6 +2,5 @@
 title: "Integrating Vite and DDEV into WordPress"
 publishedAt: "2025-04-28"
 summary: "Learn how to use modern frameworks and build tools such as Vite and DDEV to work in the WordPress ecosystem."
+url: "https://www.viget.com/articles/integrating-vite-and-ddev-into-wordpress/"
 ---
-
-Article originally published on Viget - [View Article](https://www.viget.com/articles/integrating-vite-and-ddev-into-wordpress/)
