[n/a] Adding clients I have worked with

--- a/app/projects/work/aylohealth.mdx
+++ b/app/projects/work/aylohealth.mdx
@@ -4,5 +4,6 @@ publishedAt: "2023-02-12"
 summary: "Aylo Health needed a rebuild and a new brand before opening new locations."
 role: "Full Stack Developer"
 tech: "WordPress, Tailwind CSS, PHP, React, MapBox, Salesforce Integration"
+award: "w3 AWARDS Gold Winner"
 url: "https://www.aylohealth.com/"
 ---
