[n/a] Adding clients component, active nav

--- a/app/projects/work/goodbids.mdx
+++ b/app/projects/work/goodbids.mdx
@@ -3,7 +3,7 @@ title: "GOODBIDS"
 publishedAt: "2024-04-28"
 summary: "A novel approach to online fundraising - positive auctions, with a twist."
 role: "Full Stack Developer"
-tech: "WordPress, Tailwind CSS, PHP, React"
+tech: "WordPress, Tailwind CSS, HTMX, PHP, React"
 award: "w3 AWARDS Silver Winner"
 url: "https://www.viget.com/work/goodbids-charity-auction-platform/"
 ---
