--- a/app/content/about.mdx
+++ b/app/content/about.mdx
@@ -3,8 +3,9 @@ title: "About"
 publishedAt: "2025-06-27"
 ---
 
-I'm a software engineer based in Colorado. I'm currently working at [Viget](https://www.viget.com).
+I'm a web developer based in Colorado. I'm currently working at [Viget](https://www.viget.com).
 
-After starting my career as a web designer, I quickly found that I really enjoyed building UI interfaces.
-I have built UI interfaces ranging from startup to multi million dollar web applications.
+With a background in design and over 12+ years in the marketing industry, I have a deep understanding of web development.
+Over my career I have built large multi million dollar web applications and high impact
+websites. I have lead frontend development from initial planning and design to production and maintenance.
 I enjoy learning new skills, love the outdoors, and always looking for new challenges.
