[n/a] Fixing build and deploy bug

--- a/app/content/about.mdx
+++ b/app/content/about.mdx
@@ -4,8 +4,5 @@ publishedAt: "2025-06-27"
 ---
 
 I'm a web developer based in Colorado. I'm currently working at [Viget](https://www.viget.com).
-
-With a background in design and over 12+ years in the marketing industry, I have a deep understanding of web development.
-Over my career I have built large multi million dollar web applications and high impact
-websites. I have lead frontend development from initial planning and design to production and maintenance.
+With a background in design and over 12+ years in the marketing industry, I have a deep understanding of web development. Over my career I have built large multi million dollar web applications and high impact websites. I have lead frontend development from initial planning and design to production and maintenance.
 I enjoy learning new skills, love the outdoors, and always looking for new challenges.
