Updating about info

--- a/app/content/about.mdx
+++ b/app/content/about.mdx
@@ -3,6 +3,6 @@ title: "About"
 publishedAt: "2025-06-27"
 ---
 
-I'm a web developer based in Colorado. I'm currently working at [Viget](https://www.viget.com).
-With a background in design and over 12+ years in the marketing industry, I have a deep understanding of web development. Over my career I have built large multi million dollar web applications and high impact websites. I have lead frontend development from initial planning and design to production and maintenance.
-I enjoy learning new skills, love the outdoors, and always looking for new challenges.
+I'm a Senior Web Developer based in Colorado, currently working at [Viget](https://www.viget.com).
+With over 12+ years of experience in web development and digital marketing, I specialize in creating scalable, accessible, and performant web applications. Over my career I have built large multi million dollar web applications and high impact websites. My approach combines technical excellence with strategic thinking, ensuring that every project I work on is built for long-term success.
+I'm passionate about accessibility and staying current with emerging technologies. When I'm not coding, you'll find me exploring Colorado's outdoors, learning new skills, or seeking out the next technical challenge.
