--- a/app/content/about.mdx
+++ b/app/content/about.mdx
@@ -4,5 +4,5 @@ publishedAt: "2025-06-27"
 ---
 
 I'm a Senior Web Developer based in Colorado, currently working at [Viget](https://www.viget.com).
-With over 12+ years of experience in web development and digital marketing, I specialize in creating scalable, accessible, and performant web applications. Over my career I have built large multi million dollar web applications and high impact websites. My approach combines technical excellence with strategic thinking, ensuring that every project I work on is built for long-term success.
+With over {Math.floor((new Date() - new Date("2012-06-01")) / (1000 * 60 * 60 * 24 * 365.25))} years of experience in web development and digital marketing, I specialize in creating scalable, accessible, and performant web applications. Over my career I have built large multi million dollar web applications and high impact websites. My approach combines technical excellence with strategic thinking, ensuring that every project I work on is built for long-term success.
 I'm passionate about accessibility and staying current with emerging technologies. When I'm not coding, you'll find me exploring Colorado's outdoors, learning new skills, or seeking out the next technical challenge.
